# card_sorter

./: .gitignore  Makefile  README.md  pyproject.toml
card_sorter/: cards.py  collections.py  console.py  utils.py
data/: archidekt.csv
tests/: conftest.py  test_collections.py  test_console.py  test_math.py  test_packets.py  test_sorting.py  test_utils.py
tests/data/: favorite_cards.txt
